# pytest-example

./: pyproject.toml
source/: service.py  shapes.py
tests/: .coverage  test_circle.py  test_my_functions.py  test_rectangle.py  test_service.py  test_square.py
